@@ -1,0 +1,69 @@
+<VirtualHost *:80>
+    ServerAdmin administrator@lms.org.pl
+    DocumentRoot /var/www/html/lms
+    ServerName lms.org.pl
+    ErrorLog logs/lms.org.pl-error_log
+    CustomLog logs/lms.org.pl-access_log common
+    
+    <Directory "/var/www/html/lms">
+        AllowOverride None
+        <IfModule mod_authz_core.c>
+            Require all granted
+        </IfModule>
+    </Directory>
+    
+    <Directory "/var/www/html/lms/backups">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Directory>
+    
+    <Directory "/var/www/html/documents">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Directory>
+    
+    <Directory "/var/www/html/lms/lib">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Directory>
+    
+    <Directory "/var/www/html/lms/templates_c">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Directory>
+    
+    <Directory "/var/www/html/lms/modules">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Directory>
+    
+    <Directory "/var/www/html/lms/contrib/bin">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Directory>
+    
+    <Directory "/var/www/html/lms/userpanel/lib">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Directory>
+    
+    <Directory "/var/www/html/lms/userpanel/templates_c">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Directory>
+    
+    <Files "lms.ini">
+        <IfModule mod_authz_core.c>
+            Require all denied
+        </IfModule>
+    </Files>
+
+</VirtualHost>
