@@ -2,6 +2,8 @@ $Id$
 
 version 25-git (????-??-??):
 
+  - enhancement: script automating the installation of LMS + PostgreSQL for the Debian 10/Buster
+    system has been added to the "sample" catalog [interduo]
   - improvement: introduced invoices.hide_ssn configuration variable which allows to hide SSN
     on invoices [chilan]
   - improvement: show icon correspondent to netdevnode online status in netdevinfo [ravvar]
